--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "deps": "^1.0.0",
     "framer-motion": "^12.0.6",
-    "next": "15.1.6",
+    "next": "^16.0.0",
     "next-themes": "^0.2.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hot-toast": "^2.4.1",
     "swiper": "^9.3.2"
   },
