--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
