--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.0.6",
+    "lucide-react": "^0.552.0",
     "next": "^16.0.0",
     "next-themes": "^0.2.1",
     "react": "^19.2.0",
