added drag and drop for submission

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -31,7 +31,7 @@
     "Project Image": "object_detection_in_images.png",
     "Previously Completed?": "Yes",
     "Project Experience": "Completed Python/ML projects",
-    "Resources Link": "https://github.com/priyasingh1/object_detection_in_images",
+    "Resources Link": "",
     "Comments": "",
     "InWishList": "True"
   },
