modified submission page

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -213,7 +213,7 @@
     "Project Experience": "Completed Python/ML projects",
     "Resources Link": "https://github.com/ritikasharma6/handwritten_digit_recognition",
     "Comments": "",
-    "InWishList": "False"
+    "InWishList": "True"
   },
   {
     "id": "7",
@@ -249,7 +249,7 @@
     "Project Experience": "Completed Python/ML projects",
     "Resources Link": "https://github.com/simrankaur7/recommendation_system",
     "Comments": "",
-    "InWishList": "False"
+    "InWishList": "True"
   },
   {
     "id": "8",
