--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
       "dom.iterable",
       "esnext"
     ],
-    "baseUrl": ".",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -14,7 +13,6 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
@@ -32,7 +30,8 @@
       ]
     },
     "strictNullChecks": true,
-    "target": "ES2017"
+    "target": "ES2017",
+    "moduleResolution": "node"
   },
   "include": [
     "next-env.d.ts",
